--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -2,22 +2,18 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CLIENT_ID</key>
-	<string>441146186016-qnm32s25oeffmadmqrhkg92oo21aflv1.apps.googleusercontent.com</string>
-	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.441146186016-qnm32s25oeffmadmqrhkg92oo21aflv1</string>
 	<key>API_KEY</key>
-	<string>AIzaSyC3LrR7ssgKQd2i1pbfpWNKlFiwOsJ7uuQ</string>
+	<string>AIzaSyAeEOWq3FTw-0V0LTfDP0nbGPO0hEG-fJ4</string>
 	<key>GCM_SENDER_ID</key>
-	<string>441146186016</string>
+	<string>824893113729</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.soldout.sa</string>
 	<key>PROJECT_ID</key>
-	<string>soldout-99b4c</string>
+	<string>soldout-b8dd0</string>
 	<key>STORAGE_BUCKET</key>
-	<string>soldout-99b4c.appspot.com</string>
+	<string>soldout-b8dd0.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -29,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:441146186016:ios:1de3815d2bcebcd2cb5f45</string>
+	<string>1:824893113729:ios:c2f5d6bf521e63ec091480</string>
 </dict>
 </plist>
