--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,34 +21,36 @@ dependencies:
   conditional_builder_null_safety: ^0.0.6
   flutter_polygon: ^0.3.0+2
   carousel_slider: ^4.0.0
-  hexcolor: ^2.0.7
+  hexcolor: ^3.0.1
   flutter_rating_bar: ^4.0.1
   smooth_page_indicator: ^1.0.0+2
-  flutter_slidable: ^2.0.0
-  shimmer: ^2.0.0
+  flutter_slidable: ^3.0.1
+  shimmer: ^3.0.0
   easy_localization: ^3.0.1
-  image_picker: ^0.8.5+3
-  dio: ^4.0.6
+  image_picker: ^1.0.4
+  dio: ^5.3.3
   fluttertoast: ^8.0.8
   url_launcher: ^6.1.5
-  device_info_plus: ^4.1.2
+  device_info_plus: ^8.2.2
   new_version: ^0.3.1
-  internet_connection_checker: ^0.0.1+4
+  internet_connection_checker: ^1.0.0+1
   path_provider: ^2.0.11
-  webview_flutter: ^3.0.4
+  webview_flutter: ^4.4.2
   pusher_channels_flutter: ^2.0.1
   firebase_core: ^2.9.0
   firebase_messaging: ^14.0.1
-  flutter_local_notifications: ^11.0.0
+  flutter_local_notifications: ^16.1.0
   firebase_dynamic_links: ^5.0.1
-  share_plus: ^4.2.0
+  share_plus: ^6.3.4
   timeago: ^3.3.0
-  flutter_launcher_icons: ^0.10.0
+  flutter_launcher_icons: ^0.13.1
   cached_network_image: ^3.2.3
   flutter_native_image: ^0.0.6+1
   new_version_plus: ^0.0.1+4
 
 
+dependency_overrides:
+  package_info_plus: ^3.0.0
 
 
 
